# MemoHub

./: .env.docker-compose  README.md  docker-compose.dev.yml
.github/workflows/: backend-tests.yml  frontend-tests.yml
apps/backend/: .env.example  README.md  pyproject.toml
apps/backend/src/: main.py
apps/backend/src/config/: __init__.py  env.py
apps/backend/src/modules/: __init__.py
apps/frontend/: .dockerignore  Dockerfile  README.md  package.json  vite.config.ts
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  main.py  pyproject.toml
backend/src/: main.py
backend/src/infra/db/: __init__.py  engine.py  schema.py  session.py
backend/src/infra/db/migrations/: env.py
backend/src/modules/: api_router.py
backend/src/modules/knowledge/: __init__.py  dtos.py  models.py  router.py  service.py
backend/tests/: conftest.py
backend/tests/integration/modules/knowledge/: test_router_integration.py
backend/tests/unit/modules/knowledge/: test_router_unit.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts  style.css
frontend/src/core/components/: BaseButton.spec.ts  BaseButton.vue  BaseInput.spec.ts  BaseInput.vue  Sidebar.spec.ts  Sidebar.vue
frontend/src/core/router/: index.ts
frontend/src/core/services/: api.ts
frontend/src/modules/knowledge/: types.ts
infra/: .gitignore  README.md  nginx.conf
infra/terraform/: README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
scripts/: deploy.sh  destroy.sh
(+33 files in other folders)
