[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.51.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = ["."]
